fix tags overflow

--- a/bda.css
+++ b/bda.css
@@ -409,7 +409,6 @@ a {
   clear: left;
   margin-left: 5px;
   margin-top: 3px;
-  height: 18px;
 }
 
 
